[tool.poetry]
name = "galvanize"
version = "0.1.0"
description = "Luxafor Mute-button for Zoom"
authors = ["Simon Lundström <github-commits@soy.se>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
