[tool.poetry]
name = "galvanize"
version = "0.1.0"
description = "Luxafor Mute button for PulseAudio and e.g. Zoom"
authors = ["Simon Lundström <github-commits@soy.se>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7.2"
hidapi = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pylint = "^2.15.7"
mypy = "^0.991"
pytest = "^7.2.0"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
show_error_codes = true

[tool.pylint]
    [tool.pylint.master]
    disable= [
        'missing-docstring',
        'consider-using-f-string',
        ]

    output-format = 'parseable'


[tool.poetry.scripts]
galvanize = 'galvanize:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
